tests/sksl/errors/InvalidMeshFragmentMainReturn.stage
### Compilation failed:

error: 5: 'main' must return: 'vec2' or 'float2'
float3 main(const Varyings varyings, out half4 c) {
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: 6: unknown identifier 'position'
    return position.xxx;
           ^^^^^^^^
2 errors
